# fetchgraph

./: .coverage  .demo_qa.mk  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_demo_qa.md  caffeinate_make.sh  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: publish.yml  pytest.yml
_demo_data/shop/: customers.csv  meta.json  order_items.csv  (+4 more)
scripts/: tag_rm.py
tests/: conftest.py  test_context_merge.py  test_context_refetch_compiles_dsl.py  test_demo_qa_batch.py  test_demo_qa_runner.py  test_demo_qa_settings.py  test_demo_qa_settings_sources.py  test_dsl_compile.py  test_dsl_compile_ops.py  test_dsl_normalize.py  test_dsl_normalize_autocorrect.py  test_dsl_parser.py  test_dsl_schema_registry.py  test_make_tracer_export.py  test_plan_compile.py  test_plan_compile_selectors.py  test_plan_prompt_rules.py  test_provider_catalog_compact.py  test_query_sketch_binding.py  test_query_sketch_schema_binding.py  test_relational_base.py  test_relational_composite.py  test_relational_composite_cross_provider.py  test_relational_normalizer_regression.py  test_relational_pandas.py  test_relational_sql.py  test_relational_string_ops.py  test_replay_export_selection.py  test_replay_fixed.py  test_replay_fixtures.py  test_replay_iter_events_bad_json.py  test_replay_known_bad_backlog.py  test_replay_log_trace_truncate.py  test_replay_requires_plan_normalize.py  test_replay_resource_access.py  test_replay_runtime.py  test_schema_binding_qualifier_recovery.py  test_schema_binding_v1.py  test_selector_dialects.py  test_selector_dialects_query_sketch.py  (+13 more)
(+263 files in other folders)
