[project]
name = "fetchgraph"
version = "0.0.3"
description = "Graph-like planning → context fetching → synthesis agent (library-style)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alexander Onischenko"}]
keywords = ["agents", "context", "langgraph", "planning", "llm"]
dependencies = [
  "pydantic>=2.6",
  "pandas>=2.0",
]

[tool.setuptools.package-data]
fetchgraph = ["prompts/*.md"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]